fix not showing properly on small screen bug

--- a/rocket/style.css
+++ b/rocket/style.css
@@ -112,3 +112,11 @@ animated points
   transition: opacity 0.3s;
   pointer-events: none;
 }
+
+
+@media screen and (max-width: 700px) {
+  .point .text{
+    top: 50px;
+    left: -110px;
+  }
+}
